RESOLVED FIXED241211
CanvasGradient should store a strong reference instead of a CanvasBase&
https://bugs.webkit.org/show_bug.cgi?id=241211
Summary CanvasGradient should store a strong reference instead of a CanvasBase&
Alex Christensen
Reported 2022-06-01 19:13:19 PDT
...
Attachments
Patch (8.50 KB, patch)
2022-06-01 19:15 PDT, Alex Christensen
no flags
Alex Christensen
Comment 1 2022-06-01 19:15:20 PDT
EWS
Comment 2 2022-06-01 20:51:42 PDT
Committed r295116 (251207@main): <https://commits.webkit.org/251207@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 459950 [details].
Radar WebKit Bug Importer
Comment 3 2022-06-01 20:52:13 PDT
Note You need to log in before you can comment on or make changes to this bug.