CanvasGradient should store a strong reference instead of a CanvasBase& https://bugs.webkit.org/show_bug.cgi?id=241211

Reviewed by Chris Dumez.

* LayoutTests/fast/canvas/add-color-stop-after-gc-expected.txt: Added.
* LayoutTests/fast/canvas/add-color-stop-after-gc.html: Added.
* Source/WebCore/html/canvas/CanvasGradient.cpp:
(WebCore::CanvasGradient::CanvasGradient):
(WebCore::m_context):
(WebCore::CanvasGradient::create):
(WebCore::CanvasGradient::addColorStop):
(WebCore::m_canvas): Deleted.
* Source/WebCore/html/canvas/CanvasGradient.h:
* Source/WebCore/html/canvas/CanvasRenderingContext2DBase.cpp:
(WebCore::CanvasRenderingContext2DBase::createLinearGradient):
(WebCore::CanvasRenderingContext2DBase::createRadialGradient):
(WebCore::CanvasRenderingContext2DBase::createConicGradient):

Canonical link: https://commits.webkit.org/251207@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295116 268f45cc-cd09-0410-ab3c-d52691b4dbfc